--- a/game.html
+++ b/game.html
@@ -49,7 +49,25 @@
     </div>
     <div id="score-modal" class="modal-overlay"><div class="modal-content"><h2>Fim de Jogo!</h2><p>Pontuação: <span id="final-score">0</span></p><button id="close-score-btn">Ok</button></div></div>
     <div id="ranking-modal" class="modal-overlay"><div class="modal-content"><h2>Ranking</h2><ol id="ranking-list"></ol><div id="my-ranking-display" style="display:none"><h3>Sua Posição</h3><p id="my-rank-text"></p></div><button id="close-ranking-btn">Fechar</button></div></div>
-    <div id="credits-modal" class="modal-overlay"><div class="modal-content"><h2>Créditos</h2><p>Desenvolvido com carinho.</p><button id="close-credits-btn">Fechar</button></div></div>
+    <div id="credits-modal" class="modal-overlay">
+    <div class="modal-content">
+
+    <h2>Créditos</h2>
+    
+    <div id="pessoas_credito"><h3><strong>Samyra Gomes</strong></h3>
+    <h3>Hugo Oliveira</h3>
+    <h3>Manel (MATA PORCO)</h3>
+    <h3>Isabella Da Silva</h3>
+    <h3>Eudison Junior</h3>
+    <h3>Thalysson de Jesus</h3>
+    <h3>João Preto</h3>
+    <h3>Leticia Rodrigues</h3>
+    <h3>Rhuan Brazino777</h3></div>
+
+    <p>Desenvolvido com carinho.</p>
+    <button id="close-credits-btn">Fechar</button>
+    </div>
+    </div>
     
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
