--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </div>
 
     <!-- Scripts de Autenticação -->
+        <!-- Scripts de Autenticação -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script> <!-- <<< ADICIONE ESTA LINHA AQUI -->
     <script src="js/firebase-init.js"></script>
     <script src="js/login.js"></script> <!-- ÚNICO SCRIPT DE LÓGICA AQUI -->
 </body>
