--- a/game.html
+++ b/game.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="orientation-blocker">
+        <div class="orientation-content">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="80px" height="80px">
+                <path d="M18.75 3.75h-3.75a.75.75 0 0 0 0 1.5h1.496L12 9.753l-3.23-2.422a.75.75 0 0 0-.94.316l-3 5.25a.75.75 0 0 0 .658 1.103h.142a.75.75 0 0 0 .658-1.103l2.2-3.85 2.872 2.154a.75.75 0 0 0 .94-.316L17.25 4.504V6a.75.75 0 0 0 1.5 0V3.75Z" clip-rule="evenodd" />
+            </svg>           
+            <h1>Gire seu dispositivo</h1>
+            <p>Este jogo foi feito para ser jogado no modo paisagem.</p>
+        </div>
+    </div>
     <div id="loader-overlay" class="modal-overlay" style="display: flex;"><div class="loader"></div></div>
     <div id="game-container" style="display: none;">
         <div id="top-bar">
